# factorydb

./: README.md  pyproject.toml
factorydb/: analysis.ipynb  charts.ipynb  factories.py  generators.py  helpers.py  main.py
tests/: test_factorydb.py
