[tool.poetry]
name = "factorydb"
version = "0.1.0"
description = ""
authors = ["Przemysław Postrch <przemyslaw.postrach@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Faker = "^15.1.1"
pandas = "^1.5.0"
numpy = "^1.23.4"
jupyter = "^1.0.0"
altair = "^4.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
